--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   },
   "homepage": "https://github.com/forbesmyester/febase",
   "dependencies": {
+    "babel": "^5.5.6",
+    "babel-core": "^5.5.6",
+    "babel-loader": "^5.1.4",
+    "install": "^0.1.8",
+    "node-libs-browser": "^0.5.2",
+    "npm": "^2.11.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
