--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": "^2.11.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "react-style": "^0.5.5",
     "reflux": "^0.2.7",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
