--- a/package.json
+++ b/package.json
@@ -16,18 +16,30 @@
   },
   "homepage": "https://github.com/forbesmyester/febase",
   "dependencies": {
-    "babel": "^5.5.6",
-    "babel-core": "^5.5.6",
+    "alt": "^0.16.10",
+    "babel": "^5.6.4",
+    "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
-    "install": "^0.1.8",
+    "errorhandler": "^1.4.0",
+    "eslint": "^0.24.0",
+    "eslint-plugin-react": "^2.5.2",
+    "express": "^4.13.0",
+    "material-ui": "^0.9.2",
     "node-libs-browser": "^0.5.2",
+    "normalize.css": "^3.0.3",
     "npm": "^2.11.1",
+    "ramda": "^0.14.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-style": "^0.5.5",
-    "reflux": "^0.2.7",
+    "react-tap-event-plugin": "^0.1.7",
     "webpack": "^1.9.10",
+    "webpack-dev-middleware": "^1.1.0",
     "webpack-dev-server": "^1.9.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "longjohn": "^0.2.4",
+    "mocha": "^2.2.5"
+  }
 }
