--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel": "^5.6.4",
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
+    "babel-plugin-react-display-name": "^1.0.3",
     "errorhandler": "^1.4.0",
     "eslint": "^0.24.0",
     "eslint-plugin-react": "^2.5.2",
@@ -33,6 +34,7 @@
     "react-router": "^0.13.3",
     "react-style": "^0.5.5",
     "react-tap-event-plugin": "^0.1.7",
+    "require-parts": "^0.9.9",
     "webpack": "^1.9.10",
     "webpack-dev-middleware": "^1.1.0",
     "webpack-dev-server": "^1.9.0"
